--- a/style.css
+++ b/style.css
@@ -65,12 +65,13 @@ header section {
 .featured-box {
     display: flex;
     justify-content: space-around;
+    margin: 24PX;
 }
 
 .featured-title {
     text-align: center;
     margin: 10px;
-padding: 10px;
+    padding: 10px;
 }
 
 .fratured-dis {
@@ -78,10 +79,61 @@ padding: 10px;
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
+    margin: 24px;
 }
 
 .featured-head {
     color: #272727;
     font-size: 40px;
     font-weight: 700;
+}
+
+.box {
+    width: 464px;
+    height: 538px;
+    border-radius: 300px 300px 0px 0px;
+    margin: 15px;
+    padding: 10px;
+    text-align: center;
+    position: relative;
+
+}
+
+.box-img {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+}
+
+.box1 {
+    background-color: rgba(167, 33, 98, 0.15);
+
+}
+
+.box2 {
+    background: rgba(5, 151, 160, 0.15);
+
+}
+
+.box3 {
+    background-color: rgba(71, 125, 17, 0.15);
+}
+
+
+.featured-box div h4 {
+    color: #272727;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 35px;
+    text-decoration-line: underline;
+    cursor: pointer;
+}
+.box1 img{
+    margin-top: 37px;
+}
+.box3 img{
+    margin-top: 15px;
 }
