--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header section {
 
 .banner-img {
     padding: 20px 0px 0px 20px;
-    margin-top: 27px;
+    margin-top: 29px;
     margin-bottom: 0px;
 }
 
@@ -131,9 +131,49 @@ header section {
     text-decoration-line: underline;
     cursor: pointer;
 }
-.box1 img{
+
+.box1 img {
     margin-top: 37px;
 }
-.box3 img{
+
+.box3 img {
     margin-top: 15px;
+}
+
+.hot-deal-section {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    width: 1920px;
+    height: 620px;
+    margin: 128px 200px;
+}
+
+#hot-deal-id {
+    background: rgba(229, 84, 115, 0.05);
+}
+
+.hot-deal-img {
+    margin-right: 418px;
+}
+
+.deal-title>samp {
+    color: #ff0037d5;
+}
+
+.deal-title {
+    color: #272727;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 24px;
+}
+
+.deal-dis {
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 32px;
 }
