--- a/style.css
+++ b/style.css
@@ -177,3 +177,15 @@ header section {
     line-height: 30px;
     margin-bottom: 32px;
 }
+
+.insta {
+    text-align: center;
+}
+
+.inta-box {}
+
+.insta-img {
+    padding: 24px;
+    width: 342px;
+    height: 396px;
+}
