--- a/style.css
+++ b/style.css
@@ -218,25 +218,29 @@ header section {
     height: 64px;
     border-style: none;
     border-radius: 8px;
+    margin-bottom: 28px;
+    padding-left: 22px;
+
 }
 
 footer {
-    background-color: black;
+    background-color: rgba(17, 16, 16, 1);
     width: 1920px;
-    height: 449px;
+    height: 300px;
     text-align: center;
-    color: rgba(255, 255, 255, 0.849);
+    color: rgba(255, 255, 255, 1);
     justify-content: center;
     padding-top: 128px;
-    
+
 }
 
 footer h3 samp {
     color: #e6234dd2;
 
 }
-.footer-dis{
-    
+
+.footer-dis {
+
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
@@ -244,13 +248,36 @@ footer h3 samp {
 }
 
 .footer-titel {
-    color: #ffffffe7;
-    font-size: 40px;
-    font-weight: 700;
+    color: rgba(255, 255, 255, 1);
+    font-size: 50px;
+    font-weight: 800;
     line-height: normal;
     margin-bottom: 24px;
 
 }
-footer small{
+
+footer small {
     color: rgba(255, 255, 255, 0.4);
+}
+
+.occ-img {
+    width: 342px;
+    height: 342px;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.occ-dis {
+    display: flex;
+    justify-content: space-around;
+    margin: 0 200px;
+}
+
+.occ-title {
+    color: #272727;
+    font-size: 25px;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 24px;
+    cursor: pointer;
 }
